AB-113 Active links, double border is fixed for realz, and minor changes

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -540,8 +540,24 @@ video {
   position: relative;
 }
 
-.z-10{
-  z-index: 10;
+.left-0{
+  left: 0px;
+}
+
+.right-0{
+  right: 0px;
+}
+
+.top-0{
+  top: 0px;
+}
+
+.top-\[49px\]{
+  top: 49px;
+}
+
+.z-40{
+  z-index: 40;
 }
 
 .z-50{
@@ -550,10 +566,6 @@ video {
 
 .col-span-12{
   grid-column: span 12 / span 12;
-}
-
-.col-span-6{
-  grid-column: span 6 / span 6;
 }
 
 .mx-auto{
@@ -622,14 +634,6 @@ video {
   height: 100%;
 }
 
-.min-h-screen{
-  min-height: 100vh;
-}
-
-.w-1\/2{
-  width: 50%;
-}
-
 .w-6{
   width: 1.5rem;
 }
@@ -688,14 +692,14 @@ video {
   border-width: 1px;
 }
 
-.border-y-0{
-  border-top-width: 0px;
-  border-bottom-width: 0px;
-}
-
 .border-x-0{
   border-left-width: 0px;
   border-right-width: 0px;
+}
+
+.border-y-0{
+  border-top-width: 0px;
+  border-bottom-width: 0px;
 }
 
 .border-l-0{
@@ -708,10 +712,6 @@ video {
 
 .border-t-0{
   border-top-width: 0px;
-}
-
-.border-background{
-  border-color: rgba(14, 14,14,100);
 }
 
 .border-line{
@@ -756,10 +756,6 @@ video {
 
 .pt-2{
   padding-top: 0.5rem;
-}
-
-.pt-\[50px\]{
-  padding-top: 50px;
 }
 
 .text-center{
@@ -824,7 +820,6 @@ video {
   max-height: 0px;
   overflow: hidden;
   transition: max-height .2s ease-in-out;
-  top: calc(100% + 1px);
 }
 
 .top-sub-menu.active{
@@ -834,6 +829,10 @@ video {
 
 #side_menu {
   height: calc(100vh - 50px);
+}
+
+.side-menu-link.active{
+  background-color: rgba(45,45,45,100);
 }
 
 .rotate {
@@ -849,27 +848,25 @@ video {
   color: rgba(255,255,255,100);
 }
 
-@media (min-width: 640px){
-  .sm\:w-1\/3{
-    width: 33.333333%;
-  }
-}
-
 @media (min-width: 768px){
-  .md\:relative{
-    position: relative;
+  .md\:sticky{
+    position: sticky;
+  }
+
+  .md\:top-\[50px\]{
+    top: 50px;
   }
 
   .md\:col-span-3{
     grid-column: span 3 / span 3;
   }
 
-  .md\:hidden{
-    display: none;
+  .md\:col-span-9{
+    grid-column: span 9 / span 9;
   }
 
-  .md\:w-1\/4{
-    width: 25%;
+  .md\:hidden{
+    display: none;
   }
 
   .md\:translate-x-0{
@@ -879,11 +876,11 @@ video {
 }
 
 @media (min-width: 1280px){
-  .xl\:col-span-2{
-    grid-column: span 2 / span 2;
+  .xl\:col-span-10{
+    grid-column: span 10 / span 10;
   }
 
-  .xl\:w-1\/6{
-    width: 16.666667%;
+  .xl\:col-span-2{
+    grid-column: span 2 / span 2;
   }
 }
